Reverted edits by [[Special:Contributions/74.72.143.73|74.72.143.73]] ([[User_talk:74.72.143.73|Talk]]); changed back to last version by [[User:RobotGMwikt|RobotGMwikt]] <consumption#2417846>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -13,36 +13,44 @@
 
 ====Translations====
 {{top|the act of consuming something}}
-*Bulgarian: [[консумиране]], [[изразходване]] 
-*[[Catalan]]: [[consum]]
-*Czech: [[konzumace]], [[spotřeba]] 
+*Bulgarian: [[консумиране]] {{f}}, [[изразходване]] {{n}}
+*[[Catalan]]: [[consum]] {{m}}
+*Czech: [[konzumace]] {{f}}, [[spotřeba]] {{f}}
 *Finnish: [[kuluttaminen]], [[kulutus]]
 *French: [[consommer]], [[consumer]]
 {{mid}}
 *Japanese: [[消費]] (しょうひ, shōhi)
-*Portuguese: [[consumo]] 
-*Russian: [[потребление]] (potreblénije) 
+*Portuguese: [[consumo]] {{m}}
+*Russian: [[потребление]] (potreblénije) {{n}}
 {{bottom}}
 
 {{top|the amount consumed}}
-*Bulgarian: [[консумация]] 
-*[[Catalan]]: [[consum]] 
-*Czech: [[konzumace]],[[spotřeba]]
+*Bulgarian: [[консумация]] {{f}}
+*[[Catalan]]: [[consum]] {{m}}
+*Czech: [[konzumace]] {{f}}, [[spotřeba]] {{f}}
 *Finnish: [[kulutus]]
-*French: [[consommation]] 
+*French: [[consommation]] {{f}}
 {{mid}}
-*Russian: [[потребление]] (potreblénije) 
+*Russian: [[потребление]] (potreblénije) {{n}}
 {{bottom}}
 
 {{top|tuberculosis}}
-*Bulgarian: [[туберкулоза]] 
+*Bulgarian: [[туберкулоза]] {{f}}
 *[[Catalan]]: [[tuberculosi]]
-*Czech: [[tuberkulóza]] 
+*Czech: [[tuberkulóza]] {{f}}
 *Finnish: [[tuberkuloosi]]
-*French: [[tuberculose]] 
+*French: [[tuberculose]] {{f}}
 {{mid}}
-*Russian: [[чахотка]] (čakhótka) 
+*Russian: [[чахотка]] (čakhótka) {{f}}
 *Turkish: [[tüberküloz]]
 {{bottom}}
 
-consumption
+[[ar:consumption]]
+[[fr:consumption]]
+[[id:consumption]]
+[[it:consumption]]
+[[hu:consumption]]
+[[pl:consumption]]
+[[ru:consumption]]
+[[vi:consumption]]
+[[zh:consumption]]
