--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -1,6 +1,9 @@
 <!-- NOTE: If you edit this page, please also edit "pyjamas" -->
 ==English==
 
+===Alternative spellings===
+*[[pyjamas]] (''UK'')
+
 ===Etymology===
 From the {{Pers.}} {{FAchar|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning ''leg garment'' via {{Urd.}}/{{Hind.}} [[पैजामा]].
 
@@ -13,9 +16,6 @@ From the {{Pers.}} {{FAchar|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning ''
 
 # (US) [[Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants.
 # loose-fitting [[trousers]] worn in the [[Far East]] by both sexes
-
-===Alternative spellings===
-*[[pyjamas]] (''British'')
 
 ====Translations====
 {{trans-top|clothes for wearing to bed and sleeping in}}
