--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -8,15 +8,17 @@
 {{en-verb|bleeds|bleeding|bled}}
 
 # {{intransitive}} Of an animal, to [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
-# to remove air bubbles from a pipe containing [[fluid]]s.
+# To remove air bubbles from a pipe containing [[fluid]]s.
 
 ====Derived terms====
 *[[bleed dry]]
+*[[bleeder]]
 *[[bleeding heart]]
 *[[bleed out]]
+*[[bleed to death]]
 
 ====Translations====
-{{top}}
+{{trans-top|lose blood through an injured blood vessel}}
 *Arabic: {{ARchar|[[ينزف]]}}
 *Czech: [[krvácet]]
 *Dutch: [[bloeden]]
