--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -11,14 +11,16 @@
 *:Rhymes: [[Rhymes:English:-aʊnd|-aʊnd]]
 
 ===Etymology 1===
+
 ====Verb====
 '''bound'''
-
-# {{past of|[[bind]]}}
+# {{past of|bind}}
 #: ''I '''bound''' the splint to my leg.''
 #: ''I had '''bound''' the splint with duct tape.''
-
+[[Category:English irregular simple past forms]]
+[[Category:English irregular past participles]]
 ===Etymology 2===
+
 ====Noun====
 {{en-noun}}
 
