-(''dated'') +{{dated}}, header -Related Terms +Related terms <mini#2433398>

--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -1,5 +1,4 @@
 {{see|Mini|mini-}}
-
 ==English==
 
 ===Pronunciation===
@@ -17,9 +16,9 @@ See [[mini-]]
 {{en-noun}}
 
 # A [[miniskirt]].
-# (''dated'') A [[minicomputer]].
+# {{dated}} A [[minicomputer]].
 
-===Related Terms===
+===Related terms===
 *[[mini-]]
 *[[miniature]]
 *[[minimum]]
