header -Intransitive Verb +Intransitive verb, +{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}, trans unlink Portuguese, trans unlink Portuguese, header -Transitive Verb +Transitive verb, trans unlink Portugu <gamble#2434811>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -8,8 +8,10 @@
 *[[gambol]]
 
 <!--
-===Intransitive Verb===
+
+===Intransitive verb===
 '''gambol''' ('''gambolled''' or '''gamboled''', '''gambolling''' or '''gamboling''')
+
 # to run, as in frisky, or playful
 #:One of the deer would '''gambol''' in the high grass while others '''gambolled''' nearby.
 -->
@@ -17,16 +19,18 @@
 ===Noun===
 {{wikipedia}}
 {{en-noun}}
+
 # A risk undertaken with a potential gain. A significant risk is implied
 # A risky venture
 #:The sailors had taken many '''gambles''' ''(plural)'' with the sea and always won.
 
 ===Translations===
+{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
 {{top}}
 *Dutch: [[gok]] {{m}}
 *German: [[Glücksspiel]] {{n}}, [[Spiel]] {{n}}
 *[[Interlingua]]: [[joco]]
-*[[Portuguese]]: [[jogo]] {{m}}
+*Portuguese: [[jogo]] {{m}}
 {{bottom}}
 
 ===Intransitive verb===
@@ -40,20 +44,20 @@
 *Dutch: [[gokken]]
 *German: [[riskant]] [[spielen]]
 *[[Interlingua]]: [[jocar]]
-*[[Portuguese]]: [[jogar]]
+*Portuguese: [[jogar]]
 {{bottom}}
 
-===Transitive Verb===
+===Transitive verb===
 {{en-verb|gambl|ing}}
 
-# To risk (something) for potential gain 
+# To risk (something) for potential gain
 #:''He '''gambled''' his reputation on the outcome.''
 
 ===Translations===
 {{top}}
 *German: aufs [[Spiel]] [[setzen]]
 *[[Interlingua]]: [[poner]] in [[risco]]
-*[[Portuguese]]: [[arriscar]]
+*Portuguese: [[arriscar]]
 {{bottom}}
 
 [[zh-min-nan:gamble]]
