--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -43,6 +43,7 @@
 # {{CockneyRS}} A [[suit]].
 
 ===Translations===
+{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
 {{trans-top|whistle}}
 *Arabic: {{ARchar|[[صفارة]]}} {{Unicode|(ʂufára)}} {{f}}
 *[[Breton]]: [[c'hwitell]] {{f}}, c'hwitelloù {{p}} (1); [[c'hwitelladenn]] {{f}}, c'hwitelladennoù {{p}} (2,3)
