--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -31,6 +31,7 @@ Old English [[īġland]].  The S was added by confusion with French ''[[isle]]''
 
 ====Translations====
 {{top}}
+*Ainu: [[moshir]]
 *Albanian: [[ishull]] {{m}}
 *Arabic: {{ARchar|[[جزيرة|جَزِيرَة]]}} {{Unicode|(jazíːra)}} {{f}}, {{ARchar|[[جزائر|جَزَائِر]]}} {{Unicode|(jazáː’ir)}} {{p}}, {{ARchar|[[جزر|جُزُر]]}} (júzur) {{p}}
 *Basque: [[irla]], [[uharte]]
