--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -4,17 +4,8 @@
 ===Pronunciation===
 *Rhymes: [[Rhymes:English:-æmbəl|-æmbəl]]
 
-===Homophones===
+====Homophones====
 *[[gambol]]
-
-<!--
-
-===Intransitive verb===
-'''gambol''' ('''gambolled''' or '''gamboled''', '''gambolling''' or '''gamboling''')
-
-# to run, as in frisky, or playful
-#:One of the deer would '''gambol''' in the high grass while others '''gambolled''' nearby.
--->
 
 ===Noun===
 {{wikipedia}}
@@ -22,13 +13,13 @@
 
 # A risk undertaken with a potential gain. A significant risk is implied
 # A risky venture
-#:The sailors had taken many '''gambles''' ''(plural)'' with the sea and always won.
+#: The sailors had taken many '''gambles''' ''(plural)'' with the sea and always won.
 
-===Translations===
-{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
+====Translations====
 {{top}}
 *Dutch: [[gok]] {{m}}
 *German: [[Glücksspiel]] {{n}}, [[Spiel]] {{n}}
+{{mid}}
 *[[Interlingua]]: [[joco]]
 *Portuguese: [[jogo]] {{m}}
 {{bottom}}
@@ -39,10 +30,11 @@
 # To take a risk, with the potential of a positive outcome
 # To play risky games, especially [[casino]] games, for monetary gain
 
-===Translations===
+====Translations====
 {{top}}
 *Dutch: [[gokken]]
 *German: [[riskant]] [[spielen]]
+{{mid}}
 *[[Interlingua]]: [[jocar]]
 *Portuguese: [[jogar]]
 {{bottom}}
@@ -53,10 +45,11 @@
 # To risk (something) for potential gain
 #:''He '''gambled''' his reputation on the outcome.''
 
-===Translations===
+====Translations====
 {{top}}
 *German: aufs [[Spiel]] [[setzen]]
 *[[Interlingua]]: [[poner]] in [[risco]]
+{{mid}}
 *Portuguese: [[arriscar]]
 {{bottom}}
 
