--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -20,21 +20,40 @@
 # {{slang}} a [[doctor]].
 
 ====Translations====
+{{trans-top|sound made by a duck}}
+{{trans-mid}}
+*Swedish: [[kvack]] {{n}}
+{{trans-bottom}}
+
+{{trans-top|fraudulent or incompetent doctor of medicine}}
+{{trans-mid}}
+*Swedish: [[kvacksalvare]] {{c}} 
+{{trans-bottom}}
+
+{{trans-top|charlatan}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|doctor}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{checktrans}}
 {{top}}
-*Dutch: [[kwak]] (1), [[kwakzalver]] (2, 3)
-*Finnish: [[kvaak]] (1), [[puoskari]] (2, 3)
-*French: [[coin-coin]] (1) ''m''; [[charlatan]] ''m'' (2, 3); [[toubib]] ''m'' (4)
-*German: [[Quacksalber]] ''m'' (2, 3)
-*Greek: (1) [[πα-πα]] (pa-pa), (2,3) [[κομπογιαννίτης]] (koboyanitis) {{m}}, (2,3,4) [[αλμπάνης]] (albanis) {{m}}, (2,3) [[τσαρλατάνος]] (tsarlatanos) {{m}}
-*Indonesian: [[kwek-kwek]] (1), [[gadungan]] (2, 3)
-*Interlingua: [[quac]] (1)
-*Italian: [[qua qua]] (1) ''m''; [[ciarlatano]] (2, 3); [[dottore]] (4)
-*Japanese: [[クェッ クェッ]](quek-quek), [[クワッ クワッ]](quwak-quwak)(1), [[やぶ医者]] (yabuisha)(2)
+*{{ttbc|Dutch}}: [[kwak]] (1), [[kwakzalver]] (2, 3)
+*{{ttbc|Finnish}}: [[kvaak]] (1), [[puoskari]] (2, 3)
+*{{ttbc|French}}: [[coin-coin]] (1) ''m''; [[charlatan]] ''m'' (2, 3); [[toubib]] ''m'' (4)
+*{{ttbc|German}}: [[Quacksalber]] ''m'' (2, 3)
+*{{ttbc|Greek}}: (1) [[πα-πα]] (pa-pa), (2,3) [[κομπογιαννίτης]] (koboyanitis) {{m}}, (2,3,4) [[αλμπάνης]] (albanis) {{m}}, (2,3) [[τσαρλατάνος]] (tsarlatanos) {{m}}
+*{{ttbc|Indonesian}}: [[kwek-kwek]] (1), [[gadungan]] (2, 3)
+*{{ttbc|Interlingua}}: [[quac]] (1)
+*{{ttbc|Italian}}: [[qua qua]] (1) ''m''; [[ciarlatano]] (2, 3); [[dottore]] (4)
+*{{ttbc|Japanese}}: [[クェッ クェッ]](quek-quek), [[クワッ クワッ]](quwak-quwak)(1), [[やぶ医者]] (yabuisha)(2)
 {{mid}}
-*Polish: [[kwak]] (1) [[szarlatan]] (2,3) [[konował]] (4)
-*Romanian: [[mac]] (1) [[şarlatan]] (2,3)
-*Russian: [[кря-кря]] (krja-krja) (1)
-*Spanish: [[cuac]] (1); [[curandero]] ''m'' (2)
+*{{ttbc|Polish}}: [[kwak]] (1) [[szarlatan]] (2,3) [[konował]] (4)
+*{{ttbc|Romanian}}: [[mac]] (1) [[şarlatan]] (2,3)
+*{{ttbc|Russian}}: [[кря-кря]] (krja-krja) (1)
+*{{ttbc|Spanish}}: [[cuac]] (1); [[curandero]] ''m'' (2)
 {{bottom}}
 
 ===Adjective===
