--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -61,5 +61,6 @@ From the {{Pers.}} {{FAchar|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning ''
 [[Category:Persian derivations]]
 [[Category:English pluralia tantum]]
 
+[[pl:pajamas]]
 [[vi:pajamas]]
 [[zh:pajamas]]
