--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -1,7 +1,8 @@
+{{wikipedia}}
 ==English==
 
 ===Etymology===
-French from Latin ''[[maxim]]'' + ''[[-um]]''
+French from {{L.}} ''[[#Latin|maximum]]''.
 
 ===Pronunciation===
 '''max*im-um'''
@@ -66,6 +67,14 @@ MAAHX-im-muhm
 *[[supremum]]
 
 [[Category:English nouns with irregular plurals]]
+
+----
+==Latin==
+===Etymology===
+neutral of ''[[maximus]]''
+
+'''maximum'''
+#[[#Noun|maximum]]
 
 [[de:maximum]]
 [[et:maximum]]
