--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -20,8 +20,7 @@ From {{OE.}} verb ''[[biddan]]'' ‘ask, demand’. Conflation from {{OE.}} verb
 #:''We '''bade''' him farewell.''
 #:'''1999:''' "[H]e walked up to the village of Wall and '''bade''' good morning to the guards on the gate." &mdash; ''Stardust'', Neil Gaiman, page 15 (2001 Perennial Edition).
 
-====Translations====
-{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
+=====Translations=====
 {{trans-top|issue a command}}
 *Czech: [[žádat]]
 {{trans-mid}}
