added Sicilian section: ==Sicilian== ===Verb=== '''amai''' # ''[[first person singular]] [[preterite]] [[active voice|active]] [[indicative mood|indicative]] of'' '''[[amari#Sicilian|amari]] [[catego <amai#2459406>

--- a/en/a/amai.4232.wikitext
+++ b/en/a/amai.4232.wikitext
@@ -3,6 +3,7 @@
 '''amai'''
 
 # (Flemish) Exclamation of surprise or disappointment; [[boy]]!
+
 ----
 
 ==Italian==
@@ -10,10 +11,21 @@
 '''amai'''
 # ''first-person singular indicative past historic of [[amare]]''
 [[Category:Italian verb forms]]
+
 ----
+
 ==Japanese==
 ===Adjective===
 {{ja-adj|r|decl=い|hira=あまい}}
 # [[甘い]]: [[sweet]]
 
 [[fi:amai]]
+
+----
+
+==Sicilian==
+===Verb===
+'''amai'''
+# ''[[first person singular]] [[preterite]] [[active voice|active]] [[indicative mood|indicative]] of'' '''[[amari#Sicilian|amari]]
+
+[[category:Sicilian verb forms]]
