--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -113,7 +113,7 @@
 *:Roman: [[svinja#Serbian|svinja]] {{f}}
 *Slovak: [[prasa]] {{n}} (1)
 *Slovene: [[pujs]] {{m}}, [[prašič]] {{m}}, [[svinja]] {{f}}
-*Spanish: [[cerdo]] {{m}}, [[chancho]] {{m}} {{italbrac|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, [[chon]] {{m}} {{italbrac|Northern Central Spain}}, [[coche]] {{m}} {{italbrac|Guatemala}}, [[cochi]] {{m}} {{italbrac|Northwestern Mexico}}, [[cochín]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[cochino]] {{m}} {{italbrac|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, [[cocho]] {{m}} {{italbrac|Northern Spain|specifically Leon}}, [[gocho]] {{m}} {{italbrac|Northern Spain|spefically Asturias and Leon}}, [[gorrino]] {{italbrac|Southern Central and Eastern Central Spain}}, [[guarro]] {{m}} {{italbrac|Western Spain|specifically Extremadura}}, [[marrano]] {{m}} {{italbrac|Central and Western Venezuela|Colombia}}, [[puerco]] {{m}} {{italbrac|Caribbean Islands|Costa Rica|Mexico|Panama}}, [[tocino]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[tunco]] {{m}} {{italbrac|El Salvador}}
+*Spanish: [[cerdo]] {{m}}, [[chancho]] {{m}} {{italbrac|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, [[chon]] {{m}} {{italbrac|Northern Central Spain}}, [[coche]] {{m}} {{italbrac|Guatemala}}, [[cochi]] {{m}} {{italbrac|Northwestern Mexico}}, [[cochín]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[cochino]] {{m}} {{italbrac|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, [[cocho]] {{m}} {{italbrac|Northern Spain|specifically Leon}}, [[cuto]] {{m}} {{italbrac|Northern Spain - specifically Aragon, La Rioja and Navarra}}, [[gocho]] {{m}} {{italbrac|Northern Spain|spefically Asturias and Leon}}, [[gorrino]] {{italbrac|Southern Central and Eastern Central Spain}}, [[guarro]] {{m}} {{italbrac|Western Spain|specifically Extremadura}}, [[marrano]] {{m}} {{italbrac|Central and Western Venezuela|Colombia}}, [[puerco]] {{m}} {{italbrac|Caribbean Islands|Costa Rica|Mexico|Panama}}, [[tocino]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[tunco]] {{m}} {{italbrac|El Salvador}}
 *Swahili: [[nguruwe]]
 *Swedish: [[gris]], [[svin]]
 *Tagalog: [[baboy]]
