robot  Adding: [[fr:pariente]] <pariente#2465658>

--- a/en/p/pariente.4512.wikitext
+++ b/en/p/pariente.4512.wikitext
@@ -12,6 +12,7 @@ Latin ''[[parens]], parentis''
 *[[emparentar]]
 
 [[es:pariente]]
+[[fr:pariente]]
 [[io:pariente]]
 [[sw:pariente]]
 [[hu:pariente]]
