--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -18,7 +18,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 #:''I've got ten divisions to do for my homework.''
 #A large [[military]] [[unit]], usually made up of two or three [[brigade]]s.
 #A [[section]] of a large [[company]].
-#{{context|biology|taxonomy}} A [[rank]] (Latin ''divisio''), particularly used of [[plant|plants]] or [[fungus|fungi]], corresponding to the [[phylum]] in [[animal]] [[taxonomy]]; a [[taxon]] at that rank 
+#{{context|biology|taxonomy}} A [[rank]] (Latin ''divisio'') below [[kingdom]] and above [[class]], particularly used of [[plant|plants]] or [[fungus|fungi]], also (particularly of [[animal]]s) called a [[phylum]]; a [[taxon]] at that rank 
 #:''Magnolias belong to the '''division''' Magnoliophyta.''
 #A disagreement; a difference of viewpoint between two sides of an argument.
 #{{music}} A florid instrumental variation of a melody in the 17th and 18th centuries, originally conceived as the dividing of each of a succession of long notes into several short ones.
