--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -83,6 +83,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 [[fr:though]]
 [[io:though]]
 [[it:though]]
+[[ku:though]]
 [[hu:though]]
 [[pl:though]]
 [[simple:though]]
