[[User:Connel MacKenzie/clean|Random cleanup]] <CD#2483697>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -1,7 +1,4 @@
-{{rfc|Initialism noun unknown/invalid header}}
 ==English==
-
-===Pronunciation===
 
 ====Homophones====
 *[[seedy]]
@@ -50,7 +47,7 @@
 
 ==Norwegian==
 
-===Initialism noun===
+===Initialism===
 {{no-noun-irreg|m|CD'en|CD'er|CD'ene}}
 
 # [[#English|CD]] (disc)
