--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -18,6 +18,7 @@
 *Czech: [[konzumace]] {{f}}, [[spotřeba]] {{f}}
 *Finnish: [[kuluttaminen]], [[kulutus]]
 *French: [[consommer]], [[consumer]]
+*Hebrew: [[צריכה]] (tzrikha) {{f}} (''act of consuming goods'')
 {{mid}}
 *Japanese: [[消費]] (しょうひ, shōhi)
 *Portuguese: [[consumo]] {{m}}
