tidy up,another reference found <bubble#2488398>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -3,19 +3,19 @@
 
 ===Etymology===
 [[Image:Soap Bubble - foliage background - iridescent colours - Traquair 040801.jpg|thumb|right|Soap bubbles.]]
-Partly imitative, also influenced by [[burble]].
+Partly imitative, also influenced by ''[[burble]]''.
 
 ===Pronunciation===
 *{{audio|en-us-bubble.ogg|Audio (US)}}
-*{{rhymes|ʌbəl}}
+*:{{rhymes|ʌbəl}}
 
 ===Noun===
 {{en-noun}}
 
-#A [[spherical]]ly [[contained]] [[volume]] of air, especially one made from [[soapy]] liquid.
-#A small spherical [[cavity]] in a solid material.
-#Anything resembling a [[hollow]] sphere.
-#A period of intense [[speculation]] in a market, causing prices to rise quickly to [[irrational]] levels as the [[metaphorical]] bubble expands, and then fall even more quickly as the bubble bursts.
+# A [[spherical]]ly [[contained]] [[volume]] of air, especially one made from [[soapy]] liquid.
+# A small spherical [[cavity]] in a solid material.
+# Anything resembling a [[hollow]] sphere.
+# A period of intense [[speculation]] in a market, causing prices to rise quickly to [[irrational]] levels as the [[metaphorical]] bubble expands, and then fall even more quickly as the bubble bursts.
 
 ====Translations====
 {{trans-top|spherically contained volume of air}}
@@ -27,7 +27,7 @@ Partly imitative, also influenced by [[burble]].
 {{trans-bottom}}
 
 {{trans-top|small spherical cavity in a solid}}
-*French: [[trou]] {{m}} (2)
+*French: [[trou]] {{m}}
 {{trans-mid}}
 *Telugu: [[బుడగ]] (buDaga)
 {{trans-bottom}}
@@ -90,8 +90,8 @@ Partly imitative, also influenced by [[burble]].
 {{trans-top|rise up in bubbles}}
 *Finnish: [[kuplia]], [[poreilla]]
 *Hungarian: [[buborékol]], [[bugyborékol]]
-*Korean: [[부글]]거리다 (bugeul-georida)
 {{trans-mid}}
+*Korean: [[부글]]거리다 (bugeul-georida)
 *Swedish: [[bubbla]]
 {{trans-bottom}}
 
@@ -106,6 +106,7 @@ Partly imitative, also influenced by [[burble]].
 ====References====
 {{R:Dobson & Irwin Newcastle 1970}}
 {{R:New Geordie Dictionary 1987}}
+{{R:Northeast Dialect 2005}}
 
 [[ar:bubble]]
 [[fa:bubble]]
