--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -70,12 +70,14 @@
 {{trans-mid}}
 *Italian: [[peso]] {{m}}
 *Russian: [[блин]] (blin) {{m}} ''disc'', [[гиря]] (gír'a) {{f}} ''dumbbell'', [[гантель]] (gantél') {{f}} ''barbell''
+*Swedish: [[vikt]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|mass}}
 *French: [[masse]]
 {{trans-mid}}
 *Russian: [[вес]] (v'es) {{m}}, [[масса]] (mássa) {{f}}
+*Swedish: [[massa]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|statistical value}}
@@ -110,6 +112,7 @@
 {{trans-top|add weight}}
 *German: [[beschweren]]
 {{trans-mid}}
+*Swedish: [[göra tyngre]]
 {{trans-bottom}}
 
 {{trans-top|oppress}}
