--- a/en/b/blew.6804.wikitext
+++ b/en/b/blew.6804.wikitext
@@ -12,7 +12,7 @@
 
 ===Verb===
 '''blew'''
-[[Category:English irregular past forms]]
+[[Category:English irregular simple past forms]]
 
 # {{simple past of|lang=English|to [[blow]]}}
 
