--- a/en/b/blown.6805.wikitext
+++ b/en/b/blown.6805.wikitext
@@ -16,6 +16,7 @@ Middle English [[blawen]], from Old English [[blaƿan|bláƿan]] (bláwan), past
 *:Rhymes: [[Rhymes:English:-əʊn|-əʊn]]
 
 === Verb ===
+[[Category:English irregular past participles]]
 '''blown'''
 # [[past participle]] of to [[blow]]
 
