--- a/en/a/abaco.4397.wikitext
+++ b/en/a/abaco.4397.wikitext
@@ -10,11 +10,10 @@
 ===Pronunciation===
 /ˈabako/
 ===Noun===
-'''abaco''' {{m}}
+{{it-noun|abac|m|o|hi}}
 
 # [[abacus]], [[plinth]], [[multiplication-table]]
 
-[[Category:Italian nouns]]
 
 [[hy:abaco]]
 [[io:abaco]]
