--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -100,6 +100,7 @@
 *[[weigh]]
 
 ===Transitive verb===
+{{rfc-trverb|Transitive verb}}
 {{en-verb}}
 
 # To [[add]] weight to something, in order to make it [[heavier]].
