header -idiom +Idiom <iemand met een kluitje in het riet sturen#2495058>

--- a/en/i/iemand met een kluitje in het riet sturen.4476.wikitext
+++ b/en/i/iemand met een kluitje in het riet sturen.4476.wikitext
@@ -1,6 +1,8 @@
 ==Dutch==
-===idiom===
+
+===Idiom===
 '''iemand met een kluitje in het riet sturen'''
-#send someone off [[empty-handed]] or none the wiser
+
+# send someone off [[empty-handed]] or none the wiser
 
 [[Category:Dutch idioms]]
