/* Transitive verb */ <weight#2496676>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -99,15 +99,14 @@
 ====Related terms====
 *[[weigh]]
 
-===Transitive verb===
-{{rfc-trverb|Transitive verb}}
+===Verb===
 {{en-verb}}
 
-# To [[add]] weight to something, in order to make it [[heavier]].
-# To [[load]], [[burden]] or [[oppress]] someone.
-# {{mathematics}} To [[assign]] weights to individual [[statistic]]s.
-# To [[bias]] something; to [[slant]].
-# (''horse racing'') To [[handicap]] a [[horse]] with a specified weight.
+# {{transitive}} To [[add]] weight to something, in order to make it [[heavier]].
+# {{transitive}} To [[load]], [[burden]] or [[oppress]] someone.
+# {{context|transitive|mathematics}} To [[assign]] weights to individual [[statistic]]s.
+# {{transitive}} To [[bias]] something; to [[slant]].
+# {{context|transitive|horse racing}} To [[handicap]] a [[horse]] with a specified weight.
 
 ====Translations====
 {{trans-top|add weight}}
