--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -1,5 +1,9 @@
-The earliest record of this phrase comes from around 27 BC in the 4'th book<ref>{{cite web |url=http://mcadams.posc.mu.edu/txt/ah/Livy/Livy04.html |title=Livy's History of Rome |accessdate=2007-05-29 |author=Bruce J. Butterfield |date=1996 |format=HTML |work=LIVY - History of Rome |publisher=Marquette University (mu.edu) |language=eng |quote=Their insolence and recklessness must be opposed, and better late than never.}}</ref> of [[Ab_Urbe_condita_(book)|Ab Urbe condita]] (History of Rome) by [[Livy|Titus Livius]].
+{{context}}
+The earliest record of the phrase "'''better late than never'''" comes from around [[27 BC]] in the 4th book<ref>{{cite web |url=http://mcadams.posc.mu.edu/txt/ah/Livy/Livy04.html |title=Livy's History of Rome |accessdate=2007-05-29 |author=Butterfield, Bruce J. |date=1996 |format=HTML |work=Livy - History of Rome |publisher=Marquette University ([http://mu.edu mu.edu]) |language=English |quote=Their insolence and recklessness must be opposed, and better late than never.}}</ref> of ''[[Ab Urbe condita (book)|Ab Urbe condita]]'' (''History of Rome'') by [[Livy|Titus Livius]].
 
 == References ==
 <references/>
-{{stub}}
+
+{{vocab-stub}}
+
+[[Category:English phrases]]
