rm tag, Spanish/Italian sorted into order, -''(archaic)'' +{{archaic}}, -''(British)'' +{{UK}}, -''(colloquial)'' +{{colloquial}}, header -Related Terms +Related terms, fixed ----'s <dame#2505137>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -10,16 +10,16 @@ Via Middle English and Old French from Latin ''[[domina]]''
 ===Noun===
 '''dame'''  (''plural:'' '''[[dames]]''')
 
-# ''(archaic)'' lady, woman
-# ''(British)'' the equivalent title to [[Sir]] for a female knight
+# {{archaic}} lady, woman
+# {{UK}} the equivalent title to [[Sir]] for a female knight
 #:  Dame Edith Sitwell
-# ''(colloquial)'' slightly derogatory way of referring to a woman
+# {{colloquial}} slightly derogatory way of referring to a woman
 #: "There ain't nothin' like a dame!" (''South Pacific'')
 
 ===Synonyms===
 * see [[wikiSaurus:woman]]
 
-===Related Terms===
+===Related terms===
 *[[knight]]
 *[[madam]]
 *[[madame]]
@@ -28,6 +28,7 @@ Via Middle English and Old French from Latin ''[[domina]]''
 ----
 
 ==Danish==
+
 ===Noun===
 '''dame'''
 
@@ -37,37 +38,54 @@ Via Middle English and Old French from Latin ''[[domina]]''
 
 ----
 
-
-
 ==French==
+
 ===Etymology===
 From ''[[Latin]]'' ''[[domina]]''
+
 ===Pronunciation===
 {{IPA|[daːm]}}
+
 ===Noun===
 '''dame''' {{f}}, ''pl'' '''dames'''
-#A [[lady]]
-#A polite form of address for a woman.
+
+# A [[lady]]
+# A polite form of address for a woman.
 
 [[Category:French nouns]]
+
+----
+
+==Italian==
+
+===Noun===
+'''dame''' {{f}}
+
+# {{plural of|[[dama]]|lang=Italian}}
+
 ----
 
 ==Japanese==
 {{see|damena}}
+
 ===Noun===
 {{ja-noun|r|hira=だめ}}
+
 # [[駄目]]: no good; useless; hopeless
 
 ----
 
 ==Norwegian==
+
 ===Noun===
 {{no-noun-c|dam}}
-#[[lady]], [[woman]]
+
+# [[lady]], [[woman]]
 
 ----
 
 ==Spanish==
+
 ===Verb===
 '''dame!'''
 
@@ -88,11 +106,3 @@ From ''[[Latin]]'' ''[[domina]]''
 [[vi:dame]]
 [[tr:dame]]
 [[zh:dame]]
-
-==Italian==
-
-===Noun===
-'''dame''' {{f}}
-
-# {{plural of|[[dama]]|lang=Italian}}
-{{rfc-auto}}
