--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 ===Etymology===
 From Latin '''[[#Latin|qua]]''', ''as'', ''"in the capacity of"''.
 
@@ -18,26 +19,6 @@ From Latin '''[[#Latin|qua]]''', ''as'', ''"in the capacity of"''.
 *Dansk (Danish): qua, [[i egenskab af]], [[eks. han førte ordet qua formand]]
 {{mid}}
 {{bottom}}
-
-----
-
-==Min Nan==
-===Pronunciation===
-*{{IPA|[ kuã˥˥ ]}}
-
-===Etymology===
-The suffix has been used since around the 17th and 18th century. It is most likely an early attempt at Romanizing the Min Nan for [[官]] (POJ: [[koaⁿ]]) ''official''. Since "[[hong]]" ([[行]]) merchants were technically officials of the lowest (9th) rank, the suffix "qua" was added to their names in honour of their positions in the [[w:Qing Dynasty|Qing]] government.
-
-===Suffix===
-{{infl|nan|suffix|poj|koaⁿ|traditional and simplified|官}}
-
-# [[official]]
-
-===Usage notes===
-*Formerly added to names of [[hong]] merchants (i.e. "''Powqua,''" "''Chinqua''").
-
-===See also===
-*(''Mandarin'') [[官]] ([[guān]])
 
 ----
 
@@ -89,17 +70,43 @@ The suffix has been used since around the 17th and 18th century. It is most like
 
 ----
 
+==Min Nan==
+
+===Pronunciation===
+*{{IPA|[ kuã˥˥ ]}}
+
+===Etymology===
+The suffix has been used since around the 17th and 18th century. It is most likely an early attempt at Romanizing the Min Nan for [[官]] (POJ: [[koaⁿ]]) ''official''. Since "[[hong]]" ([[行]]) merchants were technically officials of the lowest (9th) rank, the suffix "qua" was added to their names in honour of their positions in the [[w:Qing Dynasty|Qing]] government.
+
+===Suffix===
+{{infl|nan|suffix|poj|koaⁿ|traditional and simplified|官}}
+
+# [[official]]
+
+===Usage notes===
+*Formerly added to names of [[hong]] merchants (i.e. "''Powqua,''" "''Chinqua''").
+
+===See also===
+*(''Mandarin'') [[官]] ([[guān]])
+
+----
+
 ==Vietnamese==
+
 ===Preposition===
 '''qua'''
+
 # [[through]], [[across]], [[by]]
 
 ===Adjective===
 '''qua'''
+
 # [[last#Adjective|last]]
 
 ===Intransitive verb===
+{{rfc-trverb|Intransitive verb}}
 '''qua'''
+
 # to be [[gone]]
 # to [[cross#Verb|cross]]
 
