/* Translations */ +1sv <theory#2512755>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -104,7 +104,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 *Norwegian: [[idé]] {{m}}, [[teori]] {{m}}
 *Portuguese: [[teoria#Portuguese|teoria]] {{f}}
 *Spanish: [[teoría]] {{f}}
-*Swedish: [[idé]] {{c}}
+*Swedish: [[idé]] {{c}}, [[teori]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|a coherent set of statements attempting to explain observed phenomena}}
