+{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}} <bid#2520604>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -10,7 +10,7 @@
 From {{OE.}} verb ''[[biddan]]'' ‘ask, demand’. Conflation from {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’
 
 ====Verb====
-{{en-verb|bids|bidding|bade|bidden}}[[Category:English irregular verbs]]
+{{en-verb|bids|bidding|bade|bidden}}
 
 # {{transitive}} To issue a [[command]]; to [[tell]].
 #:''He '''bade''' me to come in.''
@@ -30,7 +30,7 @@ From {{OE.}} verb ''[[biddan]]'' ‘ask, demand’. Conflation from {{OE.}} verb
 From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation from {{OE.}} verb ''[[biddan]]'' ‘ask, demand’.
 
 ====Verb====
-{{en-verb|bids|bidding|bid|bid}}[[Category:English irregular simple past forms]][[Category:English irregular past participles]]
+{{en-verb|bids|bidding|bid|bid}}
 
 # {{intransitive}} To make an [[offer]] to [[pay]] or [[accept]] a certain [[price]].
 #:''Have you ever '''bid''' in an auction?''
@@ -70,6 +70,7 @@ From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation from 
 #:''Nice '''bid'''!''
 
 ====Translations====
+{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
 {{trans-top|offer at an auction}}
 *Dutch: [[bod]] {{n}}
 *French: [[enchère]] {{f}}
@@ -85,6 +86,11 @@ From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation from 
 ====Derived terms====
 *[[dummy bid]]
 *[[vendor bid]]
+
+[[Category:English irregular past participles]]
+[[Category:English irregular simple past forms]]
+[[Category:English irregular verbs]]
+
 ----
 
 ==Dutch==
