--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -16,8 +16,22 @@ Via Middle English and Old French from Latin ''[[domina]]''
 # {{colloquial}} slightly derogatory way of referring to a woman
 #: "There ain't nothin' like a dame!" (''South Pacific'')
 
-===Synonyms===
+====Synonyms====
 * see [[wikiSaurus:woman]]
+
+====Translations====
+{{trans-top|lady, woman}}
+*Finnish: [[daami]], [[nainen]]
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|the equivalent title to Sir for a female knight}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|slightly derogatory way of referring to a woman}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ===Related terms===
 *[[knight]]
