--- a/en/i/industrial output.7358.wikitext
+++ b/en/i/industrial output.7358.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 '''[[industrial]] [[output]]'''
 
-# {{cattag|Accounting}}: What an [[industry]] [[produce]]s, as a national total.
+# {{context|Accounting}}: What an [[industry]] [[produce]]s, as a national total.
 
 ====Translations====
 *Dutch: [[industriële produktie]] {{f}}
