No existing article <bamboo#2961967>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -1,123 +1,9 @@
-[[Image:Bamboo DSCN2465.jpg|thumb|right|Bamboo.]]
-{{wikipedia}}
-==English==
+going '''Bamboo''' is an old term used to describe [[British military]] or [[East India Company]] employees who spent so much time in [[Indonesia]], [[India]], and [[Malaysia]] that they never went back home.
 
-===Etymology===
-From Malay [[bambu]], [[mambu]]
-
-===Pronunciation===
-*{{audio|en-us-bamboo.ogg|Audio (US)}}
-
-===Noun===
-{{en-noun}}
-
-#<!--DefA--> A plant. A [[grass]] of the [[Poeaciae]] family, characterised by its woody, hollow, round, straight, jointed stem.
-#<!--DefB--> The wood of the bamboo plant as a material or [[cane]].
-# a [[didgeridoo]]
-====Derived terms====
-*[[bamboo man]]
-====Translations====
-<!--DefA-->'''plant'''
-{{top}}
-*Dutch: [[bamboe]] ''n''
-*Finnish: [[bambu]]
-*French: [[bambou]] ''m''
-*Esperanto: [[bambuo]]
-*German: [[Bambus]] ''m''
-*Greek: [[μπαμπού]] ''n''
-*Hebrew: [[במבוק]] (bambuq) ''m''
-*Italian: [[bambù]] ''m''
-*Indonesian:
-:Standard Indonesian: [[bambu]], [[buluh]], [[eru]], [[aur]]
-:Sundanese: [[awi]]
-:Banjarese: [[paring]], [[buluh]]
-{{mid}}
-*Japanese: [[竹]] (たけ, take)
-*Malay: [[pokok]] [[buluh]]
-*Portuguese: [[bambu]] ''m''
-*Russian: [[бамбук]] ''m''
-*Slovene: [[bambus]] ''m''
-*Spanish: [[bambú]] ''m''
-*Tagalog: [[kawayan]]
-*Thai: [[ไผ่]] (phai)
-{{bottom}}
-
-<!--DefB-->'''wood'''
-{{top}}
-*Dutch: [[bamboe]] ''n''
-*Finnish: [[bambu]]
-*German: [[Bambus]] ''m'', [[Bambusrohr]] ''n''
-*French: [[bambou]] ''m''
-*Hebrew: [[במבוק]] (bambuq) ''m''
-*Italian: [[bambù]] ''m''
-{{mid}}
-*Japanese: [[竹材]] (たけざい, takezai)
-*Portuguese: [[bambu]] ''m''
-*Russian: [[бамбук]] ''m''
-*Slovene: [[bambus]] ''m''
-*Tagalog: [[kawayan]]
-*Thai: [[ไม้ไผ่]] (Mai Phai)
-{{bottom}}
-
-=====Translations to be checked=====
-{{checktrans}}
-<!--Remove this section once all the translations below have been transferred to the correct table(s).-->
-
-The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  It is not currently clear to which sense(s) these translations apply.
-
-*{{ttbc|CJK Characters}}: [[篳]], [[筚]]
-*{{ttbc|Chinese}}: [[竹子]]
-*{{ttbc|Isthmus Zapotec}}: [[bixiá]]
-*{{ttbc|Korean}}: [[대나무]]
-
-====Adjective====
-'''bamboo''' (''no'' {{compar}} ''or'' {{superl}})
-
-#<!--DefC-->Made of the wood of the bamboo.
-
-====Translations====
-<!--DefC-->'''made of bamboo'''
-{{top}}
-*Dutch: bamboe-
-*Esperanto: [[bambua]]
-*French: de bambou
-*Italian: di bambù
-*Japanese: [[竹製]]の (たけせいの, takesei no)
-{{mid}}
-*Polish: [[bambus]] ''m''
-*Russian: [[бамбуковый]]
-*Slovene: [[bambusov]] ''m'', [[bambusova]] ''f'', [[bambusovo]] ''n''
-*Tagalog: [[kawayan]]
-
-{{bottom}}
-[[Category:Malay derivations]]
-----
-==Gooniyandi==
-===Etymology===
-English ''[[bamboo#English|bamboo]]''.
-===Noun===
-'''bamboo'''
-
-# [[didgeridoo]]
-[[Category:Gooniyandi nouns]]
-[[Category:gni:Musical instruments]]
-[[Category:English derivations]]
-----
-==Mandinka==
-===Noun===
-'''bamboo'''
-
-# [[crocodile]]
-[[Category:Mandinka nouns]]
-[[Category:mnk:Reptiles]]
-
-[[ar:bamboo]]
-[[fa:bamboo]]
-[[fr:bamboo]]
-[[io:bamboo]]
-[[hu:bamboo]]
-[[ru:bamboo]]
-[[fi:bamboo]]
-[[ta:bamboo]]
-[[vi:bamboo]]
-[[zh:bamboo]]
+==See also==
+* [[List of U.S. Army acronyms and expressions]]
+* [[List of U.S. Marine Corps acronyms and expressions]]
+* [[U.S. Navy slang]]
+* [[Grande Armée slang]] (French Army slang during the [[Napoleonic Wars]])
+* [[American English]]
+* [[British English]]
