--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -4,8 +4,8 @@
 From [[Indoeuropean|IE]] ''kwon-'', cognate with [[hound]], {{lat}} [[canis]], {{deu}} [[Hund]].
 
 ===Pronunciation===
-*{{italbrac|Classical}} {{IPA|/ky̌ɔ̂ːn/}}
-*{{italbrac|Koine}} {{IPA|/ˈkuon/}}
+*{{italbrac|Classical}} {{IPA|[ký.ɔːn]}}
+*{{italbrac|Koine}} {{IPA|[ˈkyon]}}
 
 ===Noun===
 {{grc-noun|κυνός|m & f|third|kyōn|κυων}}
