--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -6,9 +6,10 @@ From [[Indoeuropean|IE]] ''kwon-'', cognate with [[hound]], {{lat}} [[canis]], {
 ===Pronunciation===
 *{{italbrac|Classical}} {{IPA|[ký.ɔːn]}}
 *{{italbrac|Koine}} {{IPA|[ˈkyon]}}
+*{{italbrac|Byzantine}} {{IPA|[ˈkion]}}
 
 ===Noun===
-{{grc-noun|κυνός|m & f|third|kyōn|κυων}}
+{{grc-noun|κυνός|m & f|third|kuōn|κυων}}
 
 # [[dog]]
 # [[bitch]] (in both technical and pejorative senses)
