+{{rfc-trverb|Transitive verb}} <leather#2555239>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -80,6 +80,7 @@ Old English ''[[leþer]]''
 {{trans-bottom}}
 
 ===Transitive verb===
+{{rfc-trverb|Transitive verb}}
 '''to leather'''
 
 # To polish or wipe with a leather.
