--- a/en/a/AK.741222.wikitext
+++ b/en/a/AK.741222.wikitext
@@ -1,6 +1,8 @@
 ==English==
 
-==={{Abbreviation}}===
+==={{abbreviation}}===
+'''AK'''
+
 # [[Alaska]], a state of the [[United States of America]].
 
 [[Category:US States]]
