stub sort <bamboo#2961969>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -7,4 +7,4 @@ going '''Bamboo''' is an old term used to describe [[British military]] or [[Eas
 * [[Grande Armée slang]] (French Army slang during the [[Napoleonic Wars]])
 * [[American English]]
 * [[British English]]
-{{stub}}
+{{word-stub}}
