--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -54,6 +54,7 @@ From Northern [[French]].
 *Dutch: [[konijn]] {{n}}
 *Esperanto: [[kuniklo]]
 *Estonian: [[küülik]]
+*Ewe: [[afɔmizi]]
 *[[Faroese]]: [[kanin]]
 *Finnish: [[kaniini]], [[kani]]
 *French: [[lapin]] {{m}}
