--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -43,7 +43,7 @@ From {{OF.}} ''[[fuiret]]'' (modern ''[[furet]]'') < {{LL.}} ''[[furo]]'' ‘thi
 *Japanese: [[フェレット]] (feretto)
 *Latvian: [[okšķeris]]
 *Lithuanian: [[fredka]]
-*Macedonian: [[твор]] (tvor)
+*Macedonian: [[ласица]]
 *Maltese: [[nemes]]
 *Norwegian: [[frett]]
 *Occitan: [[fura]]
