-{{top}} +{{trans-top|a long, straight stick}}, gender -[[štap]] ''m'' +[[štap]] {{m}}, gender -[[staf]] ''m'' +[[staf]] {{m}}, gender -[[canne]] ''f'' +[[canne]] {{f}}, gender -[[Stab]] ''m'' +[[Stab]] {{m}}, gender -[[מקל|מַקֵּל]] ''m'' <staff#2561130>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -1,64 +1,64 @@
 ==English==
+
 ===Pronunciation===
 *stäf, /stɑːf/, /<tt>stA:f</tt>/
 *:[[Rhymes:English:-ɑːf|Rhymes: -ɑːf]]
 <!-- is there also an -æf pronunciation? -->
+
 ===Etymology===
 Old English ''[[stæf]]''
-===Noun===
-'''staff''' (pl. ''staffs'' or ''staves'') 
 
-#''(plural:'' '''staffs''' ''or'' '''staves''''')''  a [[long]], [[straight]] [[stick]], especially one used to assist in walking.
-#''(plural:'' '''staves''''')'' a [[series]] of [[horizontal]] [[line]]s on which [[music]]al [[note]]s are written.
-#''(plural:'' '''staff''''')'' the [[employee]]s of a [[business]]. (e.g. The company employed 10 new staff this month.)
+===Noun===
+'''staff''' (pl. ''staffs'' or ''staves'')
+
+# ''(plural:'' '''staffs''' ''or'' '''staves''''')''  a [[long]], [[straight]] [[stick]], especially one used to assist in walking.
+# ''(plural:'' '''staves''''')'' a [[series]] of [[horizontal]] [[line]]s on which [[music]]al [[note]]s are written.
+# ''(plural:'' '''staff''''')'' the [[employee]]s of a [[business]]. (e.g. The company employed 10 new staff this month.)
 
 ====Synonyms====
 *[[stave]] (2)
 *[[personnel]] (3)
 
 ====Related terms====
-#[[quarterstaff]]
+# [[quarterstaff]]
 
 ====Translations====
-'''a long, straight stick'''
-{{top}}
-*Croatian: [[štap]] ''m''
-*Dutch: [[staf]] ''m''
+{{trans-top|a long, straight stick}}
+*Croatian: [[štap]] {{m}}
+*Dutch: [[staf]] {{m}}
 *Finnish: [[sauva]]
-*French: [[canne]] ''f''
-{{mid}}
-*German: [[Stab]] ''m''
-*Hebrew: [[מקל|מַקֵּל]] ''m''
+*French: [[canne]] {{f}}
+{{trans-mid}}
+*German: [[Stab]] {{m}}
+*Hebrew: [[מקל|מַקֵּל]] {{m}}
 *Ido: [[bastono]]
-*Spanish: [[bastón]] ''m'', [[báculo]] ''m''
-{{bottom}}
+*Spanish: [[bastón]] {{m}}, [[báculo]] {{m}}
+{{trans-bottom}}
 
-'''a series of horizontal lines'''
-{{top}}
-*Dutch: [[balk]] ''m'', [[notenbalk]] ''m''
+{{trans-top|a series of horizontal lines}}
+*Dutch: [[balk]] {{m}}, [[notenbalk]] {{m}}
 *Finnish: [[nuottiviivasto]]
-*French: [[portée]] ''f''
-{{mid}}
-*German: [[Notenlinien]] ''f'' ''pl''
-*Spanish: [[varas]] ''f'' ''pl''
-{{bottom}}
+*French: [[portée]] {{f}}
+{{trans-mid}}
+*German: [[Notenlinien]] {{f}} ''pl''
+*Spanish: [[varas]] {{f}} ''pl''
+{{trans-bottom}}
 
-'''the employees of a business'''
-{{top}}
-*Danish: [[stav]] ''c''; [[stang]] ''c''; [[stab]] ''c'', [[personale]] ''n''
-*Dutch: [[medewerkers]] ''m'' ''pl''
+{{trans-top|the employees of a business}}
+*Danish: [[stav]] {{c}}; [[stang]] {{c}}; [[stab]] {{c}}, [[personale]] {{n}}
+*Dutch: [[medewerkers]] {{m}} ''pl''
 *Finnish: [[henkilökunta]]
-{{mid}}
-*French: [[personnel]] ''m'', [[staff#French|staff]] ''m''
-*German: [[Belegschaft]] ''f'', [[Personal]] ''n''
-*Spanish: [[personal]] ''m''
+{{trans-mid}}
+*French: [[personnel]] {{m}}, [[staff#French|staff]] {{m}}
+*German: [[Belegschaft]] {{f}}, [[Personal]] {{n}}
+*Spanish: [[personal]] {{m}}
 *Swedish: [[personal]]
-{{bottom}}
+{{trans-bottom}}
 
 ===Verb===
 '''to staff'''
 
-#''(transitive)'' to [[supply]] (a business) with [[employee]]s
+# {{transitive}} to [[supply]] (a business) with [[employee]]s
 
 ====Translations====
 *Danish: forsyne med personale
