category 1000 English basic words moved to English section, subst {{ku}} in trans <simple#2562300>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -13,7 +13,8 @@ From French ''simple'', from Latin ''[[simplex]]''
 
 ===Adjective===
 '''simple''' ({{compare}} [[simpler]], {{super}} [[simplest]])
-#having few parts or features; having no special features
+
+# having few parts or features; having no special features
 # {{colloquial}} feeble-minded.
 
 ====Synonyms====
@@ -39,7 +40,7 @@ From French ''simple'', from Latin ''[[simplex]]''
 {{trans-mid}}
 *Japanese: [[簡単な]] (kantan na), [[単純な]] (tanjun na)
 *Korean: [[간단한]] (gandanhan)
-*{{ku}}: {{KUchar|[[ئاسان]]}}
+*Kurdish: {{KUchar|[[ئاسان]]}}
 *Latin: [[simplex]]
 *Portuguese: [[simples]]
 *Romanian: [[simplu]]
@@ -66,14 +67,17 @@ From French ''simple'', from Latin ''[[simplex]]''
 ===Noun===
 '''simple''' (''Plural:'' '''simples''')
 
-#A medical preparation made from one plant. (As opposed to something made from more than one plant).
+# A medical preparation made from one plant. (As opposed to something made from more than one plant).
 
+[[Category:1000 English basic words]]
 
 ----
 
 ==Esperanto==
+
 ===Adverb===
 {{eo-adv}}
+
 # [[simply]]
 
 [[Category:Esperanto adverbs]]
@@ -96,14 +100,14 @@ From French ''simple'', from Latin ''[[simplex]]''
 *[[simplicité]]
 *[[simplifier]]
 
-[[Category:1000 English basic words]]
-
 ----
 
 ==Romanian==
+
 ===Adjective form===
 {{ro-adjform|fpl|simplu}}
-#[[simple#English|simple]]
+
+# [[simple#English|simple]]
 
 [[ang:simple]]
 [[ar:simple]]
