--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -51,7 +51,9 @@
 # {{context|AU|slang}} not [[right]], not up to [[standard]]
 :* ''That work you did on my car is '''crook''' mate''
 :* ''Not turning up for training was pretty '''crook'''.''
+
 ===Other Australian Usage to be sorted out===
+{{rfc-header|Other Australian Usage to be sorted out}}
 * to go crook at someone, something; to get angry
 * to be crook at/about someone, something; to be annoyed, upset
 
