--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -11,13 +11,16 @@
 ===Noun===
 {{en-noun}}
 
-# a sound made by a [[duck]].
+# The sound made by a [[duck]].
 #:''Did you hear that duck make a '''quack'''?''
-# a fraudulent or incompetent [[doctor]] of [[medicine]], an [[impostor]] who claims to have qualifications to practice [[medicine]].
+# A fraudulent or incompetent [[doctor]] of [[medicine]], an [[impostor]] who claims to have qualifications to practice [[medicine]].
 #:''That doctor is nothing but a lousy '''quack'''!''
-# a [[charlatan]].
-#:''What a '''quack''' he is, saying that's an organic [[Viagra]]™ !'' 
-# {{slang}} a [[doctor]].
+# A [[charlatan]]. <!-- #:''What a '''quack''' he is, saying that's an organic [[Viagra]]™ !'' -->
+# {{slang}} A [[doctor]].
+
+====Quotations====
+*'''1662''': ''Rump: or an Exact Collection of the Choycest Poems and Songs Relating to Late Times, Vol. II'', by ‘the most Eminent Wits’
+*:Tis hard to say, how much these Arse-wormes do urge us, We now need no '''Quack''' but these Jacks for to purge us, [...]
 
 ====Translations====
 {{trans-top|sound made by a duck}}
@@ -29,6 +32,7 @@
 
 {{trans-top|fraudulent or incompetent doctor of medicine}}
 *Finnish: [[puoskari]]
+*German: [[Quacksalber]] {{m}}
 *Greek: {{t|el|κομπογιαννίτης|m|}} (kompoyannítis), {{t|el|αλμπάνης|m|}} (albánis)
 {{trans-mid}}
 *Swedish: [[kvacksalvare]] {{c}} 
@@ -36,6 +40,7 @@
 
 {{trans-top|charlatan}}
 *Finnish: [[huijari]]
+*German: [[Quacksalber]] {{m}}
 {{trans-mid}}
 *Greek: {{t|el|τσαρλατάνος|m|}} (tsarlatános)
 {{trans-bottom}}
@@ -44,11 +49,11 @@
 {{trans-mid}}
 {{trans-bottom}}
 
+=====Translations to be checked=====
 {{checktrans}}
 {{trans-top|Translations to be categorised}}
 *{{ttbc|Dutch}}: [[kwak]] (1), [[kwakzalver]] (2, 3)
 *{{ttbc|French}}: [[coin-coin]] (1) ''m''; [[charlatan]] ''m'' (2, 3); [[toubib]] ''m'' (4)
-*{{ttbc|German}}: [[Quacksalber]] ''m'' (2, 3)
 *{{ttbc|Indonesian}}: [[kwek-kwek]] (1), [[gadungan]] (2, 3)
 *{{ttbc|Interlingua}}: [[quac]] (1)
 *{{ttbc|Italian}}: [[qua qua]] (1) ''m''; [[ciarlatano]] (2, 3); [[dottore]] (4)
@@ -59,6 +64,9 @@
 *{{ttbc|Russian}}: [[кря-кря]] (krja-krja) (1)
 *{{ttbc|Spanish}}: [[cuac]] (1); [[curandero]] ''m'' (2)
 {{trans-bottom}}
+
+====See also====
+*[[Quack-salver]] ([[Quack-saluer]])
 
 ===Adjective===
 {{en-adj|-}}
