--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -21,6 +21,8 @@
 ====Quotations====
 *'''1662''': ''Rump: or an Exact Collection of the Choycest Poems and Songs Relating to Late Times, Vol. II'', by ‘the most Eminent Wits’
 *:Tis hard to say, how much these Arse-wormes do urge us, We now need no '''Quack''' but these Jacks for to purge us, [...]
+*'''1720''': William Derham, ''Physico-theology''
+*:After ſome Months, the '''Quack''' gets privately to Town, [...]
 
 ====Translations====
 {{trans-top|sound made by a duck}}
