--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -4,7 +4,7 @@
 : From {{L.}} ''[[quadrilaterus]]'' (1650), [[quadri-]] (four) + [[latus]] (side)
 
 ===Noun===
-{{Wikipedia}}
+{{wikipedia}}
 '''quadritaleral'''
 
 # a [[polygon]] having four sides.
