--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -4,7 +4,7 @@
 '''[[public]] [[school]]'''  (''plural:'' '''[[public schools]]''')
 
 # {{UK}} A fee-charging [[private]] [[school]].
-# (''North America'') A publicly administered school.
+# {{North America}} A publicly administered school.
 
 ===Translations===
 {{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
