--- a/en/a/abassar.4115.wikitext
+++ b/en/a/abassar.4115.wikitext
@@ -4,5 +4,7 @@
 # to [[lower]], to [[abase]]
 #: abassar un perpendicular [Geom.]: to drop a perpendicular
 
+[[Category:Interlingua verbs]]
+
 [[fr:abassar]]
 [[ia:abassar]]
