--- a/en/a/AK.741222.wikitext
+++ b/en/a/AK.741222.wikitext
@@ -1,15 +1,1 @@
-==English==
-
-==={{abbreviation}}===
-'''AK'''
-
-# [[Alaska]], a state of the [[United States of America]].
-
-[[Category:US States]]
-
-[[ar:AK]]
-[[de:AK]]
-[[fr:AK]]
-[[pl:AK]]
-[[vi:AK]]
-[[tr:AK]]
+AK is the English short-hand term for the Yiddish expression "alter kaker." Literally "old shitter," it is approximately the equivalent of the English term "old fart." While always vulgar, it can be used affectionately.
