--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -90,6 +90,7 @@ From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation from 
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
 [[Category:English irregular verbs]]
+[[Category:English verbs which are their own past participle]]
 
 ----
 
