--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -19,6 +19,7 @@
 *Dutch: [[aanleg]] {{m}}
 *Old English: [[geap|ġēap]] (1)
 *Swedish: [[böjelse]]
+*Afrikaans: [[gebuig]]
 
 ===Adjective===
 {{en-adj}}
