--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -13,7 +13,7 @@
 *[[wait]]
 
 ===Noun===
-{{wikipedia1|1}}
+{{wikipedia|weight|weight (1)}}
 {{en-noun}}
 
 # The [[force]] on an object due to the gravitational attraction between it and the Earth.
