--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -52,6 +52,18 @@ Via Middle English and Old French from Latin ''[[domina]]''
 
 ----
 
+==Dutch==
+
+===Noun===
+'''dame'''
+
+# {{chess|lang=nl}} [[queen]].
+
+
+[[Category:Dutch nouns]]
+
+----
+
 ==French==
 
 ===Etymology===
