--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -268,9 +268,10 @@ From {{E.|tcs}} ''[[heart]]''.
 ==Turkish==
 
 ===Noun===
-'''at'''
+'''at''' (''objective definite'' '''[[atı]]''')
 
 # [[horse]]
+# [[knight]] {{chess|lang=tr}}
 
 [[Category:Turkish nouns]]
 
