--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -25,6 +25,7 @@ Old English ''[[leþer]]''
 *Catalan: [[cuir]] {{m}}
 *Chinese: [[皮革]] (pí gé)
 *Croatian: [[koža]] {{f}}
+*Czech: [[kůže]] {{f}}
 *Danish: [[læder]] {{n}}
 *Dutch: [[leer]] {{n}}, [[leder]] (formal) {{n}}
 *Esperanto: [[ledo]]
