--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -122,7 +122,7 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[yuè]] (yue4)|wg=yüeh<sup>4</sup>}}
+{{cmn-hanzi|pin=[[yuè]] ([[yue4]])|wg=yüeh<sup>4</sup>}}
 
 # {{defn|Mandarin}}
 
