--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -131,7 +131,7 @@ Old English ''[[þonne]]''
 {{trans-bottom}}
 
 ===Noun===
-'''then'''
+{{en-noun|-}}
 
 # that time
 #:''It will be finished before '''then'''.''
