--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -12,14 +12,15 @@
 ===Noun===
 {{en-noun|species}}
 
-:''Note - [[specie]] is an unrelated word, not the singular version of species.''
-
 # A group of plants or animals having [[similar]] [[appearance]].
 #: ''This species of rock is unique to the area''
 # {{context|biology|taxonomy}} A [[rank]] in the classification of [[organism]]s, below [[genus]] and above [[subspecies]]; a [[taxon]] at that rank
 #: ''Hence, in determining whether a form should be ranked as a '''species''' or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.'' &mdash; Darwin, '''On the Origin of Species'''
 #*See [[species name]] for usage and example of scientific names of species. 
 # {{chemistry}} A specific known or unknown [[element]], [[molecule]], [[radical]] or [[ion]]; used commonly when the [[entity]]'s status as an element, molecule etc. is unknown.
+
+====Usage notes====
+:''Note - [[specie]] is an unrelated word, not the singular version of species.''
 
 ====Related terms====
 *[[speciate]]
