--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -20,7 +20,7 @@
 # {{chemistry}} A specific known or unknown [[element]], [[molecule]], [[radical]] or [[ion]]; used commonly when the [[entity]]'s status as an element, molecule etc. is unknown.
 
 ====Usage notes====
-:''Note - [[specie]] is an unrelated word, not the singular version of species.''
+:''Note - [[specie]] is a separate word, not the singular version of species.''
 
 ====Related terms====
 *[[speciate]]
