--- a/en/m/Maneblusser.4388.wikitext
+++ b/en/m/Maneblusser.4388.wikitext
@@ -1,8 +1,9 @@
 ==Dutch==
+
 ===Etymology===
-From ''[[maan]]'' (''[[moon]]'') + ''[[blusser]]'' (''[[extinguisher]]''), after an incident where the moon shining through fog was mistaken for a tower on fire.  [http://www.trabel.com/mechelen-intro.htm] 
+From ''[[maan]]'' (''[[moon]]'') + ''[[blusser]]'' (''[[extinguisher]]''), after an incident where the moon shining through fog was mistaken for a tower on fire.  [http://www.trabel.com/mechelen-intro.htm]
 
 ===Proper noun===
 '''Maneblusser''' (''plural:'' [[Maneblussers]])
 
-#(''jocular, Flemish'') An inhabitant of the city of [[Mechelen]], [[Belgium]].
+# {{context|jocular|Flemish|lang=nl}} An inhabitant of the city of [[Mechelen]], [[Belgium]].
