--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -13,7 +13,7 @@
 ===Verb===
 {{en-verb|seiz|ing}}
 
-# To [[grab]], to [[capture]].
+# To [[grab]], to [[take]].
 # To take advantage of an [[opportunity]].
 
 ====Related terms====
