--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -35,7 +35,7 @@
 *Esperanto: [[denove]], [[ree]]
 *Finnish: [[taas]], [[uudelleen]], [[jälleen]], [[toistamiseen]], [[vielä kerran]]
 *French: [[de nouveau]], [[encore]]
-*German: [[erneut]], [[noch einmal]], [[wieder]]
+*German: [[erneut]], [[noch einmal]], [[nochmal]], [[wieder]]
 *Greek: [[ξανά]] (ksana), [[πάλι]] (pali)
 *Hebrew: [[שוב]] (šuv)
 *Hungarian: [[újra]], [[megint]], [[ismét]]
