--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -1,17 +1,18 @@
 {{See|Minimum}}
 ==English==
+
 ===Etymology===
 Latin ''[[minim]]'' small + ''[[-um]]''
 
 ===Noun===
 '''minimum''' (plural: '''[[minima]]''' or '''[[minimums]]''')
 
-#[[lowest]] [[limit]]
+# [[lowest]] [[limit]]
 
 ====Antonyms====
 *[[maximum]]
 
-====Related words====
+====Related terms====
 *[[minimize]]
 
 ====Translations====
@@ -19,12 +20,12 @@ Latin ''[[minim]]'' small + ''[[-um]]''
 *Chinese: [[最小]] (zui xiao, zui4 xiao3), [[極小值]] (zuixiaozhi, zui4xiao3zhi2)
 *Finnish: [[minimi]]
 *French: [[minimum#French|minimum]]
-*German: [[Minimum]] ''n''
+*German: [[Minimum]] {{n}}
 {{mid}}
 *Japanese: [[最小]] (saishou), [[最低]] (saitei), [[極小]] (kyokushou)
 *Latin: [[minimum#Latin|minimum]]
 *Romanian: [[minimum#Romanian|minimum]]
-*Swedish: [[minimum#Swedish|minimum]] ''n''
+*Swedish: [[minimum#Swedish|minimum]] {{n}}
 *Telugu: [[కనిష్టం]] (kanishTaM)
 {{bottom}}
 
@@ -33,11 +34,12 @@ Latin ''[[minim]]'' small + ''[[-um]]''
 ----
 
 ==Swedish==
+
 ===Noun===
 {{sv-noun-n-zero}}
 '''minimum'''
 
-#minimum
+# minimum
 
 [[es:minimum]]
 [[fr:minimum]]
