[[Wikipedia:Disambiguation pages with links|dablink repair]] dab [[East India Company]] to [[Honourable East India Company]] <bamboo#2961970>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -1,4 +1,4 @@
-going '''Bamboo''' is an old term used to describe [[British military]] or [[East India Company]] employees who spent so much time in [[Indonesia]], [[India]], and [[Malaysia]] that they never went back home.
+going '''Bamboo''' is an old term used to describe [[British military]] or [[Honourable East India Company]] employees who spent so much time in [[Indonesia]], [[India]], and [[Malaysia]] that they never went back home.
 
 ==See also==
 * [[List of U.S. Army acronyms and expressions]]
