--- a/en/p/PTO.26209.wikitext
+++ b/en/p/PTO.26209.wikitext
@@ -6,12 +6,11 @@
 ==={{initialism}}===
 '''PTO'''
 
-#please turn over
-#United States ''Patent'' and ''Trademark Office'', usually abbreviated USPTO
-#power takeoff, a powered shaft for driving auxilliary equipment
-#Parent Teacher Organization
+# United States ''Patent'' and ''Trademark Office'', usually abbreviated [[USPTO]].
+# Power takeoff, a powered shaft for driving auxiliary equipment.
+# Parent Teacher Organization
 
 ====Translations====
 *French: TSVP (''[[tourner|tournez]] [[s'il vous plaît]]'') (1)
 *German: b.w. (''[[bitte]] [[wenden]]'') (1)
-:[[Zapfwelle]] (3)
+:[[Zapfwelle]] (2)
