--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -5,6 +5,7 @@
 ===Pronunciation===
 *{{IPA|/bI'gæn/}}, {{SAMPA|/bI"g{n/}}
 *{{audio|en-us-began.ogg|Audio (US)}}
+*Hyphenation: be&middot;gan
 *Rhymes: [[Rhymes:English:-æn|-æn]]
 
 ===Verb===
