--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -43,6 +43,7 @@
 *Italian: [[giuramento]], [[promessa solenne]]
 *Português: [[promessa]] {{f}}
 {{trans-mid}}
+*Serbian: [[zavet]]
 *Slovene: [[zaprisega]] {{f}}, [[zaobljuba]] {{f}}
 *Spanish: [[juramento]], [[promesa solemne]]
 *Telugu: [[ప్రతిజ్ఞ]] (prathigna), [[ప్రతిన]] (prathina)
