--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -41,6 +41,7 @@ Old English ''[[þonne]]''
 *French: [[alors]], [[à]] [[cette]] [[époque]]-[[là]]
 *German: [[dann]], [[damals]]
 *Greek: [[τότε]]
+*Hebrew: [[איפוא]] (eiphoh)
 *[[Kurdish]]: [[hingê]], [[wê]] [[dem]]ê, [[wî]] [[çax]]î, wî [[wext]]î, wê [[gav]]ê
 *Malay: [[pada masa yang sama]]
 {{trans-mid}}
