--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -45,6 +45,7 @@
 *German: [[Mühle]] {{f}}
 *Old High German: [[mulin]] {{f}}
 *Greek: [[μύλος]] (mylos)
+*Hebrew: {{he-translation|טחנה|tachánah}}
 *Hungarian: [[malom]]
 *Italian: [[mulino]] {{m}}
 {{trans-mid}}
@@ -63,6 +64,7 @@
 *Finnish: [[tehdas]]
 *French: [[manufacture]] {{f}}
 *German: [[Fabrik]] {{f}} (''general''), [[Werk]] {{n}} (''general'') [[Papiermühle]] {{f}} (''for paper'')
+*Hebrew: {{he-translation|טחנה|tachánah}}
 {{trans-mid}}
 *Norwegian: [[mølle]] {{m}}
 *Polish: [[fabryka]] {{f}}
@@ -76,6 +78,7 @@
 *Finnish: [[tehdas]], [[tehdasrakennus]]
 *French: [[manufacture]] {{f}}
 *German: [[Fabrik]] {{f}} (''general''), [[Werk]] {{n}} (''general'') [[Papiermühle]] {{f}} (''for paper'')
+*Hebrew: {{he-translation|טחנה|tachánah}}
 {{trans-mid}}
 *Norwegian}}: [[mølle]] {{m}}, [[fabrikk]] {{m}} (''general'')
 *Polish: [[fabryka]] {{f}}
@@ -85,6 +88,7 @@
 
 {{trans-top|establishment that handles a certain type of situation routinely}}
 *Dutch: [[papiermolen]] (~ burocracy)
+*Hebrew: {{he-translation|טחנה|tachánah}}
 {{trans-mid}}
 *Norwegian}}: [[papirmølle]] {{m}}(~ burocracy)
 {{trans-bottom}}
