--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Latin [[mania]], from Greek [[μανία]] (''mania'') "madness".
+From {{L.}} [[mania]], from {{Gr.}} [[μανία]] (''mania'') "madness".
 
 ===Pronunciation===
 {| border=1 cellpadding=5
@@ -15,8 +15,8 @@ Latin [[mania]], from Greek [[μανία]] (''mania'') "madness".
 *'''Rhymes:''' [[Rhymes:English:-eɪnɪə|-eɪnɪə]]
 
 ===Noun===
+{{wikipedia}}
 {{en-noun}}
-'''mania'''
 # Violent derangement of mind; madness; insanity.
 # Excessive or unreasonable desire; insane passion affecting one or many people; fanaticism
 <!-- Modified Webster 1913 defs -->
