/* Translations */ +Czech <division#2695980>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -47,6 +47,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 
 {{trans-top|each of the parts resulting from division}}
 *Afrikaans: [[gedeelte]]
+*Czech: [[díl]] {{m}}
 *Dutch: [[deel]] {{n}}, [[gedeelte]] {{n}}
 *Finnish: [[osa]]
 {{trans-mid}}
