--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -50,8 +50,8 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 *Czech: [[díl]] {{m}}
 *Dutch: [[deel]] {{n}}, [[gedeelte]] {{n}}
 *Finnish: [[osa]]
-{{trans-mid}}
 *German: [[Teil]] {{m}}
+{{trans-mid}}
 *Malayalam: [[വിഭാഗം]] (vibhaagam)
 {{trans-bottom}}
 
@@ -112,7 +112,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 {{trans-bottom}}
 
 {{trans-top|biology: taxonomic classification of plants}}
-Finnish: [[kaari]], [[pääjakso]]
+*Finnish: [[kaari]], [[pääjakso]]
 {{trans-mid}}
 *Urdu: [[تقسیم]] (taqseem) {{f}}
 {{trans-bottom}}
