-(''poetic'') +{{poetic}}, -(''figurative'') +{{figuratively}} <ermine#2698328>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -10,8 +10,8 @@
 
 # A [[weasel]], ''[[Mustela erminea]]'', found in northern latitudes; its dark brown fur turns white in winter (apart from the black tip of the tail)
 # The white [[fur]] of this animal
-# (''poetic'') A [[symbol]] of [[purity]]
-# (''figurative'') The [[office]] of a [[judge]]
+# {{poetic}} A [[symbol]] of [[purity]]
+# {{figuratively}} The [[office]] of a [[judge]]
 # {{heraldry}} A white [[field]] with black spots
 
 ====Synonyms====
