--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -31,6 +31,7 @@
 
 ====Translations====
 {{trans-top|an area of land surrounded by water}}
+*Greek: {{t|el|νησί|n|}} (nisí)
 {{trans-mid}}
 *Welsh: [[ynys]] {{f}}
 {{trans-bottom}}
@@ -60,7 +61,7 @@
 *{{ttbc|Finnish}}: [[saari]] (1), [[koroke]] (2)
 *{{ttbc|French}}: [[île]] {{f}}, îles {{p}}
 *{{ttbc|German}}: [[Insel]] {{f}}, Inseln {{p}}
-*{{ttbc|Greek}}: [[νήσος]] (nísos) {{f}}, [[νησί]] (nisí) {{n}}
+*{{ttbc|Greek, Ancient}}: [[νήσος]] (nísos) {{f}}
 *{{ttbc|Hebrew}}: [[אי]] (i) {{m}}
 *{{ttbc|Hungarian}}: [[sziget]]
 *{{ttbc|Icelandic}}: [[eyja]], [[eyland]]
