--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -31,13 +31,16 @@
 
 ====Translations====
 {{trans-top|an area of land surrounded by water}}
+*German: [[Insel]] {{f}}
 *Greek: {{t|el|νησί|n|}} (nisí)
 {{trans-mid}}
+*Russian: [[остров]] (óstrov) {{m}}
 *Welsh: [[ynys]] {{f}}
 {{trans-bottom}}
 
 {{trans-top|an entity surrounded by other entities that are very different from itself}}
 {{trans-mid}}
+*Russian: [[остров]] (óstrov) {{m}}
 {{trans-bottom}}
 
 =====Translations to be checked=====
@@ -60,7 +63,6 @@
 *{{ttbc|Fijian}}: [[yanuyanu]]
 *{{ttbc|Finnish}}: [[saari]] (1), [[koroke]] (2)
 *{{ttbc|French}}: [[île]] {{f}}, îles {{p}}
-*{{ttbc|German}}: [[Insel]] {{f}}, Inseln {{p}}
 *{{ttbc|Greek, Ancient}}: [[νήσος]] (nísos) {{f}}
 *{{ttbc|Hebrew}}: [[אי]] (i) {{m}}
 *{{ttbc|Hungarian}}: [[sziget]]
@@ -86,7 +88,6 @@
 *{{ttbc|Polish}}: [[wyspa]] {{f}}
 {{ttbc|*Portuguese}}: [[ilha]] {{f}}, ilhas {{p}}
 *{{ttbc|Romanian}}: [[insulã]] {{f}}, [[insule]] {{p}}
-*{{ttbc|Russian}}: [[остров]] (óstrov) {{m}}
 *{{ttbc|Sardinian}}: [[isula]] {{f}}
 *{{ttbc|Scottish Gaelic}}: [[eilean]] {{m}}, [[innis]] ''f (less common)''
 *{{ttbc|Serbian}}
