--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -20,6 +20,9 @@
 # An [[entity]] [[surround]]ed by other entities that are very [[different]] from itself.
 #:''an [[island]] of tranquility'' (a calm place surrounded by a noisy environment)
 
+====Synonyms====
+*{{italbrac-colon|an entity surrounded by other very different entities}} [[oasis]]
+
 ====Derived terms====
 * [[islander]]
 * [[desert island]]
