--- a/en/k/kluit.4474.wikitext
+++ b/en/k/kluit.4474.wikitext
@@ -1,6 +1,9 @@
 ==Dutch==
-===noun===
-#[[lump]], [[clod]] (mostly in connection to [[earth]] or [[soil]])
+
+===Noun===
+'''kluit'''
+
+# [[lump]], [[clod]] (mostly in connection to [[earth]] or [[soil]])
 #:'''Expressions / Idioms'''
 #:*[[uit de kluiten gewassen]]
 #:*[[iemand met een kluitje in het riet sturen]]
