/* Translations */ *Czech <island#2709620>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -33,7 +33,8 @@
 * [[islet]]
 
 ====Translations====
-{{trans-top|an area of land surrounded by water}}
+{{trans-top|area of land surrounded by water}}
+*Czech: [[ostrov]] {{m}}
 *German: [[Insel]] {{f}}
 *Greek: {{t|el|νησί|n|}} (nisí)
 {{trans-mid}}
@@ -41,7 +42,8 @@
 *Welsh: [[ynys]] {{f}}
 {{trans-bottom}}
 
-{{trans-top|an entity surrounded by other entities that are very different from itself}}
+{{trans-top|entity surrounded by other entities that are very different from itself}}
+*Czech: [[ostrov]] {{m}}
 {{trans-mid}}
 *Russian: [[остров]] (óstrov) {{m}}
 {{trans-bottom}}
@@ -57,7 +59,6 @@
 *{{ttbc|Catalan}}: [[illa]] {{f}}
 *{{ttbc|Chinese}}: [[島]] (dǎo)
 *{{ttbc|Croatian}}: [[otok]] {{m}}
-*{{ttbc|Czech}}: [[ostrov]] {{m}}
 *{{ttbc|Danish}}: [[ø]], (''of sand'') [[holm]], (''of rock'') [[skær]]
 *{{ttbc|Dutch}}: [[eiland]] {{n}}, eilanden {{p}}
 *{{ttbc|Esperanto}}: [[insulo]]
