--- a/en/d/DVD-RW.26218.wikitext
+++ b/en/d/DVD-RW.26218.wikitext
@@ -4,3 +4,5 @@
 '''DVD-RW'''
 
 # Digital Versatile Disk - Read Writeable.  A form of digital media that is similar to a CD, but has far denser capacity and can be written to more than once.
+
+[[tr:DVD-RW]]
