--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -35,6 +35,7 @@
 ====Translations====
 {{trans-top|area of land surrounded by water}}
 *Czech: [[ostrov]] {{m}}
+*Finnish: [[saari]]
 *German: [[Insel]] {{f}}
 *Greek: {{t|el|νησί|n|}} (nisí)
 {{trans-mid}}
@@ -44,6 +45,7 @@
 
 {{trans-top|entity surrounded by other entities that are very different from itself}}
 *Czech: [[ostrov]] {{m}}
+*Finnish: [[saareke]]
 {{trans-mid}}
 *Russian: [[остров]] (óstrov) {{m}}
 {{trans-bottom}}
@@ -65,7 +67,6 @@
 *{{ttbc|Estonian}}: [[saar]], [[saared]] {{p}}
 *{{ttbc|Faroese}}: [[oyggj]] {{f}}, (small island) [[hólmur]] {{m}}, (''of rock'') [[sker]] {{n}}
 *{{ttbc|Fijian}}: [[yanuyanu]]
-*{{ttbc|Finnish}}: [[saari]] (1), [[koroke]] (2)
 *{{ttbc|French}}: [[île]] {{f}}, îles {{p}}
 *{{ttbc|Greek, Ancient}}: [[νήσος]] (nísos) {{f}}
 *{{ttbc|Hebrew}}: [[אי]] (i) {{m}}
